--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
     }(window.location))
   </script>
   <!-- End Single Page Apps for GitHub Pages -->
+  <!-- Cloudflare Web Analytics -->
+  <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
+    data-cf-beacon='{"token": "04243bb18602428e98002009dbc1b250"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 
 </html>
